fix some spacing

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,19 +1,22 @@
 h1{
-    font-size: 30px;
-    font-family: Helvetica;
+  font-size: 30px;
+  font-family: Helvetica;
 }
 
 h2{
-    font-size: 24px;
-    font-family: Helvetica;
+  font-size: 24px;
+  font-family: Helvetica;
 }
 h3{
-    font-size: 20px;
-    font-family: Helvetica;
+  font-size: 20px;
+  font-family: Helvetica;
 }
 p{
-    font-size: 14px;
-    font-family: Helvetica;
+  font-size: 14px;
+  font-family: Helvetica;
+}
+.text--bold {
+  font-weight: bold;
 }
 
 .text--center {
@@ -22,9 +25,9 @@ p{
 .faux-gif {
     display: block;
     width: 80%;
-    height: 80%;
+    height: 90%;
     position: absolute;
-    top: 0;
+    top: 10%;
     left: 0;
     right: 0;
     bottom: 0;
